     gtk-doc-tools is dead in SimGrid now.
   - Automatically extract all existing logging categories, and add the list
     to the documentation (long standing one, to say the less)
  (gras)
   - Cleanup the known architecture table. Reorder the entries to group what
     should be, and use a more consistant naming scheme.
     (some of the test dataset are still to be regenerated)
   - Allow library to register globals on each process just as userdata does.
      This is implemented using a xbt_dict and not a xbt_set, so we loose the
       lookup time (for now).
      Use it in msg and trp.
      This cleans a lot the internals and helps enforcing privacy of the
       headers between the gras components.
   - Bugfix: gras_os_time was delirious in RL.
   - Reenable GRAS

 --

SimGrid (2.90) unstable; urgency=low

  Alpha 1 on the path to SimGrid 3

  * It is a long time since the last release of SimGrid. I'm sorry about
    that but as I had told you, I was rewriting a lot of things. I apologize 
    to those who had been reporting bugs to me and that I had not answered. 
    If your bug is still in the new version, please tell me. Here is a 
    summary of the main changes.

  * REVOLUTION 1: The SimGrid project has merged with the GRAS project
    lead by Martin Quinson. As a consequence SimGrid gains a lot in
    portability, speed, and a lot more but you'll figure it out later. 
    SimGrid now comprises 3 different projects : MSG, GRAS and SMPI. 
    I wanted to release the new MSG as soon as possible and I have 
    broken GRAS, which is the reason why, for now, only MSG is fully 
    functionnal. A laconic description of these projects is available 
    in the documentation.
  
  * REVOLUTION 2: I have removed SG and I am now using a new simulation
    kernel optimized for our needs (called SURF but only the developers
    should use it). Hence, MSG is now roughly 30 times faster and I think