@@ -43,6 +43,7 @@ surf_TESTS="surf/maxmin_usage@EXEEXT@;                                        \
 msg_TESTS=" msg/msg_test@EXEEXT@ --surf-path=@top_srcdir@/examples/msg/;"
 
 gras_TESTS="gras/trp_tcp_usage;      gras/trp_file_usage;                        \
+	    gras/timer_usage@EXEEXT@;                                            \
 	    gras/datadesc_usage@EXEEXT@;                                         \
             gras/datadesc_usage@EXEEXT@ --read @srcdir@/gras/datadesc.little32;  \
 	    gras/datadesc_usage@EXEEXT@ --read @srcdir@/gras/datadesc.little32_4;\
